[package]
name = "cronitor"
version = "0.1.0"
authors = ["Floris-xlx floris@xylex.ai"]	
edition = "2021"
license = "mit"
repository = "https://github.com/floris-xlx/cronitor"
description = "Make cron jobs but SIMPLER"


[dependencies]
cronitor_macro = { version = "0.1.0", path = "cronitor_macro" }
cronitor_runtime = { version = "0.1.0", git = "https://github.com/floris-xlx/cronitor.git", branch = "main" }
ctor = "0.2.8"


[workspace]
members = [
    "cronitor_macro",
    "cronitor_runtime"
]
