[package]
name = "cronitor"
version = "0.1.0"
authors = ["Floris-xlx floris@xylex.ai"]	
edition = "2021"
license = "mit"
repository = "https://github.com/floris-xlx/cronitor"
description = "Make cron jobs but SIMPLER"


[dependencies]
cronitor_macro = "0.1.0"
cronitor_runtime = "0.1.0"
ctor = "0.2.8"


[workspace]
members = [
    "cronitor_macro",
    "cronitor_runtime"
]
