[package]
name = "cronitor_core"
version = "0.1.0"
authors = ["Floris-xlx floris@xylex.ai"]	
edition = "2021"
license = "mit"
repository = "https://github.com/floris-xlx/cronitor"
description = "Make cron jobs but SIMPLER"


[dependencies]
cronitor_macro = { path = "../cronitor_macro" }
cronitor_runtime = { path = "../cronitor_runtime" }
ctor = "0.2.8"

