[package]
name = "cronitor_macro"
version = "0.1.0"
edition = "2021"
authors = ["Floris-xlx @ xylex.ai"]
description = "A macro for cronitor"

[dependencies]
quote = "1.0.36"
syn = { version = "2.0.66", features = ["full"] }
cronitor_runtime = { path = "../cronitor_runtime" }

[lib]
proc-macro = true
