[package]
name = "cronitor_macro"
version = "0.1.0"
edition = "2021"
authors = ["Floris-xlx @ xylex.ai"]
license = "MIT"
description = "A macro for cronitor"

[dependencies]
quote = "1.0.36"
syn = { version = "2.0.66", features = ["full"] }
cronitor_runtime = "0.1.0"
ctor = "0.2.8"

[lib]
proc-macro = true
