[package]
name = "cronitor_runtime"
version = "0.1.0"
authors = ["Floris-xlx floris@xylex.ai"]	
edition = "2021"
license = "MIT"
repository = "https://github.com/floris-xlx/cronitor"
description = "runtime library for cronitor"

[dependencies]
lazy_static = "1.4.0"
chrono = "0.4.38"
cron = "0.12.1"
colored = "2.1.0"
cron-parser = "0.9.0"
ctor = "0.2.8"